--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:hover{
     
 }
 
-img{
+.bckgtxt img{
     border-radius: 30px;
     align-items: center;
     display: flex;
@@ -64,20 +64,40 @@ img{
     height: auto;
     width: auto;
     padding: 20px;
+    margin-right: 0px;
 }
 
 
-.topbox{
+.item_container_top{
     background-color: black;
     width: 100%;
     height: 150px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
-.topbox a {
+.item_container_bottom{
+    background-color: black;
+    width: 100%;
+    height: 150px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.item_container_top a {
+    display: inline-block;
+    margin: 0 10px;
+    margin-top: 40px;
+  }
+
+  .item_container_bottom a {
     display: inline-block;
     margin: 0 10px;
     margin-top: 40px;
   }
   
+  body{
+    margin: 0px;
+  }
 
+  
