--- a/style.css
+++ b/style.css
@@ -24,11 +24,16 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-}  
+}
+
+@font-face{
+  font-family: 'lostar-font';
+  src: url('fontes/BLACCS__.TTF') format('truetype');
+}
 
 h1 {
-    font-family: "Old English Text MT";
-    font-size: 49px;
+    font-family: "lostar-font";
+    font-size: 60px;
     color: white;
     margin-left: 20%;
     margin-right: 20%;
@@ -61,7 +66,6 @@ h1 {
 a:hover{
     color: #EBDE58;
     font-size: 40px;
-    transition: 0.3s;
     
 }
 
@@ -121,19 +125,18 @@ a:hover{
   align-items: center;
   margin: 0px 15px;
   background-color: #ffff;
-  width: 240px;
-  height: 150px; 
+  width: 340px;
+  height: 250px; 
   border-radius: 15px;
   border: 1px #0000;
   position: relative;
+  transition: 150ms linear;
+
 }
 
 .box:hover{
-    color: #EBDE58;
-    font-size: 40px;
-    transition: 0.3s;
-    height: 210px;
-    width: 310px;
+    height: 310px;
+    width: 410px;
 }
 
 #first_containner{
@@ -145,7 +148,8 @@ a:hover{
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  margin-top: 160px;
+  padding: 50px;
 }
 
 
@@ -156,7 +160,8 @@ a:hover{
 }
 
 #bingusbangus{
-  background-image: url(imagens/download.jpeg);
+  background-image: url(https://conceitosdomundo.pt/wp-content/uploads/2021/10/teoria-do-big-bang.jpg);
+  background-position: center;
   
 }
 
@@ -166,6 +171,24 @@ a:hover{
 }
 
 #buraconegro{
-  background-image: url(https://static.todamateria.com.br/upload/bu/ra/buraconegro1.jpg?auto_optimize=low);
+  background-image: url(https://spacetoday.com.br/wp-content/uploads/2015/02/gargantua_00.jpg);
+  background-position: center;
 
 }
+
+.box a{
+  font-family: "Old English Text Mt";
+  color: black;
+  font-size: 40px;
+}
+
+.box:hover a {
+  font-size: 45px;
+  transition: 150ms linear;
+  color: #EBDE58;
+  
+}
+
+
+
+
